# pypi-faker

./: .gitignore  Pipfile  README.md  package.json  pyproject.toml  requirements.txt  server.py  test.sh  vercel.json  wheel_generator.py  wrangler.toml
example_package/: setup.py
src/: routers.ts  server.py  test.sh  worker.ts
